deploy/manifests/istio/istio-egress/whitelist/external-service/overlays/tls/patches/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry
spec:
  ports:
    - name: tls
      number: 443
      protocol: TLS
    - name: http-port
      number: 80
      protocol: HTTP
